Uppdaterat vinstskatt-beräkningen samt uppdaterat för anrop som ska tas bort i Java.